assets/css/style.css
/* Website Template by freewebsitetemplates.com */
@font-face {
	font-family: 'Donki';
	src: url('../fonts/Typo_DonkiRoundM.ttf') format('truetype');
}

.brand{
	font-family: 'Sigmar One', cursive;
	color: white;
	font-size: 50px;
	letter-spacing: 5px;
}

body {
	background: url("https://cdn.wallpapersafari.com/31/10/LGUJcI.jpg") repeat;
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	margin: 0;
	padding: 0;
}
#header {
	background: url(../images/bg-header.png) repeat-x bottom center;
	margin: 0;
	padding: 0 0 20px;
}
#header a.logo {
	display: block;
	height: 76px;
	margin: 0 auto;
	padding: 47px 0 32px;
	width: 351px;
}
#header a.logo img {
	border: 0;
}
#header ul {
	background: url(../images/menu-border.gif) no-repeat bottom left;
	margin: 0 auto;
	overflow: hidden;
	padding: 0 0 0 1px;
	width: 914px;
}
#header ul li {
	/* background: url(../images/bg-menu.gif) repeat-x bottom center; */
	background-color: rgb(32, 30, 30);
	border-top: 2px solid #bebebe;
	float: left;
	list-style: none;
	margin: 0;
	padding: 0;
}
#header ul li a {
	background: url(../images/menu-border.gif) no-repeat bottom right;
	color: #ffffff;
	display: block;
	font-size: 14px;
	height: 42px;
	letter-spacing: 1px;
	line-height: 42px;
	margin: 0;
	padding: 0 61px;
	text-align: center;
	text-decoration: none;
	text-transform: uppercase;
}
#header ul li.selected a {
	color: #4c4d3d;
	background: #e5e5e5;
}
#header ul li a:hover {
	color: #c0c3b4;
}
#body {
	/* background: url(../images/bg-content.jpg) repeat; */
	margin: 0;
	padding: 0;
	background-color: #dad0b8;
}
#body .header {
	background: #000000 url(../images/bg-content-header.gif) repeat-x bottom center;
	margin: 0;
	padding: 20px 0 44px;
}
#body .header ul {
	margin: 0 auto;
	overflow: hidden;
	padding: 0;
	width: 960px;
}
#body .header ul li {
	float: left;
	list-style: none;
	margin: 0 0 0 23px;
	padding: 0;
	position: relative;
}
#body .header ul li:first-child {
	margin-left: 20px;
}
#body .header ul li img {
	border: 1px solid #a5a5a5;
	margin: 0;
	padding: 0;
}
#body .header ul li a {
	background: url(../images/bg-label.png) repeat-x top center;
	color: #fff;
	display: block;
	height: 95px;
	left: 0;
	line-height: 24px;
	margin: 0;
	padding: 0 0 0 20px;
	position: absolute;
	text-decoration: none;
	top: 264px;
	width: 222px;
	z-index: 3;
}
#body .header ul li a:hover {
	opacity: 0.9;
}
#body .header ul li a b {
	display: block;
	font-family: "Times New Roman", Times, serif;
	font-size: 24px;
	font-weight: normal;
	padding: 25px 0 2px;
	text-transform: uppercase;
}
#body .header ul li a span {
	background: url(../images/arrow.png) no-repeat center right;
	padding: 0 12px 0 0;
}
#body .body {
	background: url('https://host-students.scdn3.secure.raxcdn.com/app/uploads/2017/11/student-studying-at-desk.png') no-repeat;
	height: 258px;
	margin: 60px auto 44px;
	padding: 0;
	width: 919px;
}
#body .body div {
	margin: 0;
	padding: 0 0 0 40px;
	;
	width: 400px;
}
#body .body div h3 {
	color: #fff;
	font-size: 20px;
	font-weight: normal;
	letter-spacing: 1px;
	margin: 0;
	padding: 35px 0 0;
	text-transform: uppercase;
}
#body .body div h1 {
	color: #fff;
	font-family: "Times New Roman", Times, serif;
	font-size: 54px;
	letter-spacing: 2px;
	margin: 0;
	padding: 10px 0 20px;
	text-transform: uppercase;
}
#body .body div p {
	color: #d1d1d1;
	line-height: 24px;
	letter-spacing: 1px;
	margin: 0;
	padding: 0 30px 0 0;
	text-align: justify;
}
#body .body div p a {
	color: #d1d1d1;
}
#body .body div p a:hover {
	color: #fff;
}
#body .footer {
	margin: 0 auto;
	overflow: hidden;
	padding: 0 0 50px;
	width: 920px;
}
#body .footer div {
	float: left;
	margin: 0;
	padding: 0;
}
#body .footer div.blog {
	width: 433px;
}
#body .footer div.article {
	margin: 0 0 0 49px;
	width: 438px;
}
#body .footer div h3 {
	color: #544b34;
	font-family: "Times New Roman", Times, serif;
	font-size: 22px;
	margin: 0;
	padding: 0;
	text-shadow: 0 1px 0 #c7b997;
	text-transform: uppercase;
}
#body .footer div h3 a {
	color: #544b34;
	text-decoration: none;
}
#body .footer div h3 a:hover {
	color: #3e3a2f;
}
#body .footer div ul {
	margin: 0;
	padding: 0;
}
#body .footer div ul li {
	list-style: none;
	margin: 0;
	padding: 0;
}
#body .footer div ul li p {
	background: url(../images/border-dashed.png) repeat-x top left;
	color: #544b34;
	line-height: 24px;
	margin: 0;
	padding: 10px 0;
	text-shadow: 0 1px 0 #c7b997;
}
#body .footer div ul li p a {
	color: #544b34;
	text-decoration: none;
}
#body .footer div ul li p a:hover {
	color: #403721;
	text-decoration: underline;
}
#body .footer div ul li:first-child p {
	background: none;
}
#body .footer div.article ul li {
	overflow: hidden;
}
#body .footer div.article ul li div {
	float: left;
	margin: 0 20px 0 0;
	padding: 13px 0 0;
	text-align: center;
	width: 25px;
}
#body .footer div.article ul li div span {
	color: #544b34;
	text-transform: uppercase;
}
#body .footer div.article ul li div span b {
	font-size: 20px;
}
#body .footer div.article ul li p {
	float: left;
	width: 393px;
}
#body .content {
	margin: 0 auto;
	min-height: 960px;
	overflow: hidden;
	padding: 0;
	width: 920px;
}
#body .content h2 {
	color: #544b34;
	font-family: "Times New Roman", Times, serif;
	font-size: 20px;
	line-height: 30px;
	margin: 0;
	padding: 26px 0 0;
	text-shadow: 0 1px 0 #c7b997;
}
#body .content h2 a {
	color: #544b34;
	text-decoration: none;
	text-transform: none;
}
#body .content h2 a:hover {
	color: #3e3a2f;
}
#body .content h3 {
	color: #544b34;
	font-family: "Times New Roman", Times, serif;
	font-size: 20px;
	letter-spacing: 1px;
	margin: 0;
	padding: 30px 0 0;
	text-shadow: 0 1px 0 #c7b997;
	text-transform: uppercase;
}
#body .content h4 {
	color: #544b34;
	font-size: 14px;
	letter-spacing: 1px;
	margin: 0;
	padding: 30px 0 0;
	text-shadow: 0 1px 0 #c7b997;
	text-transform: uppercase;
}
#body .content p {
	color: #544b34;
	line-height: 30px;
	margin: 0;
	padding: 0;
	text-align: justify;
	text-shadow: 0 1px 0 #c7b997;
}
#body .content p a {
	color: #544b34;
}
#body .content p a:hover {
	color: #403721;
	text-decoration: underline;
}
#body .content ul {
	margin: 0;
	padding: 5px 0 0;
}
#body .content ul li {
	background: url(../images/bullet.png) no-repeat 0 15px;
	color: #544b34;
	line-height: 30px;
	list-style: none;
	margin: 0;
	padding: 0 0 0 15px;
	text-shadow: 0 1px 0 #c7b997;
}
#body .content ul.section li {
	background: none;
	list-style: decimal;
	padding: 0;
	margin: 0 0 0 22px;
}
#body .content ul.contact li {
	background: none;
	padding: 0;
}
#body .content ul li a {
	color: #544b34;
	text-decoration: none;
}
#body .content ul li a:hover {
	color: #403721;
}
#body .content .body {
	background: url(https://host-students.scdn3.secure.raxcdn.com/app/uploads/2017/11/student-studying-at-desk.png) no-repeat;
	height: 258px;
	margin: 40px auto;
	padding: 0;
	width: 919px;
}
#body .content .body div {
	margin: 0;
	padding: 0 0 0 40px;
	width: 400px;
}
#body .content .body div h3 {
	color: #fff;
	font-size: 20px;
	font-weight: normal;
	letter-spacing: 1px;
	margin: 0;
	padding: 35px 0 0;
	text-transform: uppercase;
	text-shadow: none;
}
#body .content .body div h1 {
	color: #fff;
	font-family: "Times New Roman", Times, serif;
	font-size: 54px;
	letter-spacing: 2px;
	margin: 0;
	padding: 10px 0 20px;
	text-transform: uppercase;
	text-shadow: none;
}
#body .content .body div p {
	color: #d1d1d1;
	line-height: 24px;
	letter-spacing: 1px;
	margin: 0;
	padding: 0 30px 0 0;
	text-align: justify;
	text-shadow: none;
}
#body .content .body div p a {
	color: #d1d1d1;
}
#body .content .body div p a:hover {
	color: #fff;
}
#body .content .section p {
	padding: 0 0 30px;
}
#body .content .article {
	margin: 0;
	padding: 15px 0 0;
}
#body .content .article li {
	list-style: none;
	margin: 0;
	overflow: hidden;
	padding: 10px 0;
}
#body .content .article li a.figure {
	display: block;
	float: left;
	margin: 0 20px 0 0;
	padding: 0;
}
#body .content .article li a.figure:hover {
	opacity: 0.8;
}
#body .content .article li img {
	border: 1px solid #8d8064;
	display: block;
}
#body .content .article li div {
	float: left;
	margin: 0;
	padding: 0;
	width: 609px;
}
#body .content .article li div h3 {
	line-height: 16px;
	padding: 0 0 10px;
}
#body .content .article li div span {
	display: block;
	margin: 0;
	padding: 0;
}
#body .content .article li div span b {
	display: inline-block;
	font-size: 14px;
	font-weight: normal;
	text-transform: uppercase;
	width: 55px;
}
#body .content .blog {
	float: left;
	margin: 0;
	padding: 0;
	width: 660px;
}
#body .content .blog p {
	padding: 0 0 30px;
}
#body .content .sidebar {
	float: left;
	margin: 0;
	padding: 0 0 0 30px;
	width: 230px;
}
#body .content .sidebar h3 {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	padding-top: 36px;
}
#body .content .sidebar ul li a {
	text-decoration: none;
}
#body .content .sidebar ul li a:hover {
	text-decoration: underline;
}
#footer {
	background: url(../images/bg-footer.png) repeat-x top center;
	margin: 0;
	padding: 50px 0 60px;
}
#footer div {
	margin: 0 auto;
	overflow: hidden;
	padding: 0;
	width: 920px;
}
#footer ul {
	float: left;
	margin: 0;
	overflow: hidden;
	padding: 0;
}
#footer ul li {
	float: left;
	list-style: none;
	margin: 0 20px 0 10px;
	padding: 0;
}
#footer ul li a {
	background: url(../images/icons.png) no-repeat;
	display: block;
	height: 22px;
	margin: 0;
	padding: 0;
	text-indent: -9999px;
}
#footer ul li.twitter a {
	background-position: 0 0;
	width: 28px;
}
#footer ul li.twitter a:hover {
	background-position: -33px 0;
}
#footer ul li.facebook a {
	background-position: 0 -27px;
	width: 22px;
}
#footer ul li.facebook a:hover {
	background-position: -33px -27px;
}
#footer ul li.googleplus a {
	background-position: 0 -54px;
	width: 22px;
}
#footer ul li.googleplus a:hover {
	background-position: -33px -54px;
}
#footer p {
	color: #ffffff;
	float: right;
	font-size: 12px;
	letter-spacing: 1px;
	line-height: 19px;
	margin: 0;
	padding: 0;
}

div.container { 
	padding-bottom: 150px;
}

